# epl_mastermind

./: .gitignore  LICENSE  PROJECT_CONTEXT.md  main.py  pyproject.toml
dbt/epl_mastermind/: .user.yml  dbt_project.yml  profiles.yml
dbt/epl_mastermind/models/marts/: mart_ml_features.sql  mart_player_summary.sql
dbt/epl_mastermind/models/staging/: _sources.yml  stg_player_gameweeks.sql  stg_teams.sql
models/: feature_columns.pkl  feature_importance.csv
src/exploration/: analyze_opponent_field.py
src/ingestion/: data_exploration.py
src/ml/: explore_features.py  train_baseline.py
