[project]
name = "epl-mastermind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.10.7",
    "dbt-duckdb>=1.9.4",
    "duckdb>=1.3.2",
    "joblib>=1.5.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "polars>=1.32.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
